--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	//Swagger 적용
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
 //	runtimeOnly 'com.h2database:h2'
 	//jwt의 구현 및 파싱을 위한 라이브러리
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
