--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.generate-ddl=true
 
 openai.model =gpt-3.5-turbo
 openai.api.url =https://api.openai.com/v1/chat/completions
-openai.api.key =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
-chatGpt.key=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
+openai.api.key =
+chatGpt.key=
